[package]
name = "key-path"
version = "0.1.0"
edition = "2021"
description = "A crate providing type-safe key paths"
repository = "https://github.com/Sapiet1/key-path"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
